去除 php.ini 注释  / nginx 配置优化

--- a/nginx/conf.d/zc.conf
+++ b/nginx/conf.d/zc.conf
@@ -7,7 +7,7 @@ server {
   index index.php
   server_name zquan.cc *.zquan.cc;
   server_name zquan.com *.zquan.com;
-  server_name ocld.com *.ocld.com;
+  server_name 0cld.com *.0cld.com;
   set $env "debug";
 
   include /var/www/html/conf/nginx/*.set;
