--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,8 @@ pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
-	worker_connections 768;
+    # free memory
+	worker_connections 128;
 	# multi_accept on;
 }
 
@@ -19,7 +20,7 @@ http {
 	tcp_nodelay on;
 	keepalive_timeout 65;
 	types_hash_max_size 2048;
-  client_max_body_size 50M;
+    client_max_body_size 50M;
 
 	# server_tokens off;
 
@@ -40,7 +41,7 @@ http {
 	# Logging Settings
 	##
 
-  log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
