去掉已经存在的 module

--- a/nginx/conf.d/zc.conf
+++ b/nginx/conf.d/zc.conf
@@ -4,7 +4,7 @@ upstream zc_upstream {
 
 server {
   listen 80;
-  index index.php
+  index index.php;
   server_name zquan.cc *.zquan.cc;
   server_name zquan.com *.zquan.com;
   server_name 0cld.com *.0cld.com;
